--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Esther Juma</a> and is
+          <a href="#" target="_blank">Esther Nelima</a> and is
           <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
