--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           This project was coded by
           <a href="#" target="_blank">Esther Nelima</a> and is
           <a href="#" target="_blank"> on GitHub</a> and 
-          hosted by<a href="https://www.netlify.com"></a>
+          <span>hosted by<a href="https://www.netlify.com"></a></span>
           
         </p>
       </footer>
