--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Esther Nelima</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and hosted by
-          <a href="#" target="_blank"> netlify</a>
+          <a href="#" target="_blank"> on GitHub</a> and 
+          <a href="#" target="_blank"> hosted on netlify</a>
           
         </p>
       </footer>
