--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           This project was coded by
           <a href="#" target="_blank">Esther Nelima</a> and is
           <a href="#" target="_blank"> on GitHub</a> and 
-          <a href="#" target="_blank"> hosted on netlify</a>
+          <a href="#" target="_blank"> hosted on</a>
+          <a href="https://www.netlify.com"></a>
           
         </p>
       </footer>
