--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="#" target="_blank">Esther Nelima</a> and is
           <a href="#" target="_blank"> on GitHub</a> and 
           <a href="#" target="_blank"> hosted on</a>
-          <a href="https://www.netlify.com"></a>
+          <a href="https://www.netlify.com">Netlify</a>
           
         </p>
       </footer>
