--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Esther Nelima</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and 
-          <a href="#" target="_blank"> hosted on</a>
+          <a href="#" target="_blank"> on GitHub</a> and hosted on
           <a href="https://www.netlify.com">Netlify</a>
           
         </p>
